solver now jumps more instantly to targetted locations

--- a/src/components/SolverUI/SolverUI.css
+++ b/src/components/SolverUI/SolverUI.css
@@ -128,6 +128,7 @@ a > img {
 
   .solveMoveDiv{
       margin:2px;
+      border: 1px solid transparent;
   }
 
   .solveMoveDiv:hover{
@@ -164,4 +165,3 @@ a > img {
     color: #343a40!important;
     border-radius: .25rem;
 }
-
